--- a/website/application/templates/layout.html
+++ b/website/application/templates/layout.html
@@ -61,7 +61,7 @@
 				<span class="fbutton"><a href="#">dolor</span></a>
 				<span class="fbutton"><a href="#">sit</span></a>
 				<span class="fbutton"><a href="#">amet</span></a>
-				<span><i class="far fa-arrow-alt-circle-up"></i></span>
+				<span><a href='#' title='Torna su'><i class="far fa-arrow-alt-circle-up"></i></a></span>
 			</nav>
 		{% endif %}
 	</body>
