[Website] Implemented names and surnames in register

--- a/website/application/templates/layout.html
+++ b/website/application/templates/layout.html
@@ -41,11 +41,11 @@
 				<li class="button"><a href="#">ipsum</a></li>
 				<li class="button"><a href="#">dolor</a></li>				
 				{% if not logged_in %}
-				<li class="button rbutton"><a href="login" style="margin-right: 2vh">Login</a></li>
-				<li class="button rbutton"><a href="register">Register</a></li>
+					<li class="button rbutton"><a href="login" style="margin-right: 2vh">Login</a></li>
+					<li class="button rbutton"><a href="register">Register</a></li>
 				{% else %}
-				<a href="" class="button rbutton"><span style="margin-right: 2vh">Profile</a></span>
-				<a href="" class="button rbutton">Logout</a></span>
+					<li class="button rbutton"><a href="#" style="margin-right: 2vh">Profile</a></li>
+					<li class="button rbutton"><a href="#">Logout</a></li>
 				{% endif %}
 			</ul>
 		</nav>	
