--- a/website/application/templates/home.html
+++ b/website/application/templates/home.html
@@ -3,7 +3,7 @@
 
 
 {% block css %}
-	<link type="text/css" href="{{ url_for('static', filename='style/home.css') }}">
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style/home.css') }}">
 {% endblock %}
 
 {% block content %}
