--- a/website/application/templates/layout.html
+++ b/website/application/templates/layout.html
@@ -29,6 +29,7 @@
 			<nav class="menu">
 				<ul class="navbar">
 					<li class="button"><a href="..">Home</a></li>
+					<li class="button"><a href="../post">Post</a></li>
 					<div class="dropdown">
 						<button class="ddbutton">Dropdown</button>
 						<div class="dropdown-content">
@@ -39,7 +40,9 @@
 					</div>
 					<li class="button"><a href="#">Lorem</a></li>
 					<li class="button"><a href="#">ipsum</a></li>
-					<li class="button"><a href="#">dolor</a></li>				
+					<li class="button"><a href="#">dolor</a></li>		
+					<li class="button"><a href="#">sit</a></li>	
+					<li class="button"><a href="#">amet</a></li>	
 					{% if not logged_in %}
 						<li class="button rbutton"><a href="login" style="margin-right: 2vh">Login</a></li>
 						<li class="button rbutton"><a href="register">Register</a></li>
