--- a/website/application/templates/post.html
+++ b/website/application/templates/post.html
@@ -9,38 +9,7 @@
 {% block content %}
 	<div class="post-container">
 		<div class="post-section" id="post-title">Lorem ipsum dolor sit amet</div>
+		<div class="post-section" id="post-author">Written by: Caesar-7 &bull; Approved by: Gianluparri03</div>
 		<div class="post-section" id="post-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In convallis dui purus, sed venenatis nulla iaculis quis. In hac habitasse platea dictumst. Cras aliquam nisl lectus, auctor malesuada libero sollicitudin eu. Duis ultricies erat ac velit semper dapibus. Etiam egestas leo quis odio gravida, ut tincidunt sem iaculis. Duis vestibulum blandit orci, id viverra nunc ornare vel. Quisque pretium ligula quis leo pharetra, id elementum diam porttitor.</div>
-	</div>
-	<div class="post-container">
-		<div class="post-section" id="post-title">In suscipit imperdiet lacus</div>
-		<div class="post-section" id="post-body">In suscipit imperdiet lacus, at cursus tortor fermentum vel. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nunc ac dictum turpis. Aenean eget viverra urna, vitae tempus turpis. Donec sit amet arcu purus. Proin ac lacinia arcu. Praesent velit velit, aliquam sed tincidunt non, tempus et nunc. Pellentesque finibus mi massa, in euismod purus ornare nec. Phasellus vestibulum congue odio eget tempor.</div>
-	</div>
-	<div class="post-container">
-		<div class="post-section" id="post-title">Praesent sed mauris rhoncus</div>
-		<div class="post-section" id="post-body">Praesent sed mauris rhoncus, sagittis lacus sit amet, feugiat urna. Suspendisse et suscipit est, at aliquam leo. Nunc venenatis venenatis porta. Mauris id condimentum arcu, vel consequat magna. Aenean at diam sed odio finibus pellentesque. Praesent scelerisque dui ex, sed pharetra sem iaculis ut. Ut luctus et augue at feugiat. Fusce vel justo justo. Quisque vel ligula sed nisl sollicitudin laoreet. Ut at massa ac tellus tincidunt dapibus. Duis eget ante quis leo sagittis facilisis eget ut lacus. Donec vitae diam vel felis elementum scelerisque. Mauris vitae diam ante. Donec nisi quam, gravida in libero eu, faucibus accumsan elit.</div>
-	</div>
-	<div class="post-container">
-		<div class="post-section" id="post-title">Donec metus ipsum</div>
-		<div class="post-section" id="post-body">Donec metus ipsum, interdum et augue ut, elementum faucibus magna. Nullam commodo sollicitudin purus vitae aliquet. Phasellus non diam id massa hendrerit rhoncus. Cras nisi neque, consequat nec accumsan a, faucibus eget felis. Suspendisse fermentum elit sed urna feugiat iaculis. In lobortis elementum mollis. Vestibulum lacinia massa nec lorem condimentum aliquam. Nunc bibendum tellus purus, a dapibus lorem volutpat eget. Integer aliquet eros blandit nibh pretium, eu lobortis sem egestas. Quisque pretium feugiat elementum.</div>
-	</div>
-	<div class="post-container">
-		<div class="post-section" id="post-title">Praesent fermentum dui porttitor varius aliquam</div>
-		<div class="post-section" id="post-body">Praesent fermentum dui porttitor varius aliquam. Fusce et mi leo. Nunc non neque eu enim finibus auctor. Donec a diam at odio semper euismod ut quis ipsum. Quisque suscipit blandit lobortis. Nunc in dui dolor. Donec efficitur et diam vel dictum. Mauris sollicitudin tempor tristique. Etiam non massa maximus, interdum eros non, dictum leo. Sed nec facilisis dolor, at lacinia metus. Nam aliquam mi nec felis ornare, eu euismod augue vehicula. Proin vel commodo sem. Pellentesque rhoncus nisi vitae justo facilisis lacinia. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</div>
-	</div>
-	<div class="post-container">
-		<div class="post-section" id="post-title">Proin at iaculis purus</div>
-		<div class="post-section" id="post-body">Proin at iaculis purus, nec accumsan urna. Duis mauris lacus, volutpat et tempor sit amet, posuere ut lacus. Ut at posuere dui. Ut molestie nisl convallis volutpat cursus. Duis interdum auctor luctus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vestibulum vel euismod eros. Donec in magna sit amet dui ullamcorper mattis. Proin et vulputate ante, nec tempor sapien. Phasellus eleifend lectus sit amet ex sollicitudin, vitae pharetra lacus iaculis.</div>
-	</div>
-	<div class="post-container">
-		<div class="post-section" id="post-title">Fusce dapibus, leo quis facilisis aliquam</div>
-		<div class="post-section" id="post-body">Fusce dapibus, leo quis facilisis aliquam, urna justo malesuada lorem, et faucibus risus tellus eget ligula. Suspendisse id malesuada odio. Vivamus gravida faucibus ante vitae iaculis. Proin at velit sed elit porttitor aliquam. Pellentesque lorem libero, consectetur vel auctor nec, tempor vitae mauris. Sed quis erat congue, tristique nisi eget, faucibus dolor. Praesent condimentum ligula vel mi varius maximus. Sed aliquet justo sed risus ultrices, et luctus arcu dictum. Nulla id tellus risus. Aliquam porttitor rutrum felis, in malesuada quam accumsan at. Duis pharetra risus sed lectus vulputate dignissim. Morbi tincidunt leo quis dolor dapibus bibendum. Pellentesque ornare arcu ut dui luctus, eget suscipit lorem bibendum.</div>
-	</div>
-	<div class="post-container">
-		<div class="post-section" id="post-title">Praesent eleifend est mi</div>
-		<div class="post-section" id="post-body">Praesent eleifend est mi, at tincidunt augue tincidunt eu. Cras blandit ullamcorper auctor. Suspendisse imperdiet leo nec scelerisque facilisis. Cras quam nunc, imperdiet id nunc at, mollis consequat nibh. Fusce augue libero, sollicitudin et odio molestie, tristique semper orci. Maecenas libero leo, dictum ac varius dignissim, sodales sit amet ligula. Aliquam eleifend lectus sed sem eleifend, at efficitur nisl aliquam. Proin mollis ornare mi vitae pharetra. Fusce ultrices lorem id risus ultricies, in aliquet lacus commodo. Morbi id tortor eget nunc viverra efficitur quis in purus. Ut interdum ante at mi laoreet suscipit. Mauris tempus eu orci ut lobortis. Nam ut velit finibus, vulputate nibh quis, imperdiet lectus. Vivamus sit amet maximus urna. Mauris in pellentesque ligula, sed mattis erat.</div>
-	</div>
-	<div class="post-container">
-		<div class="post-section" id="post-title">Aenean accumsan sollicitudin purus</div>
-		<div class="post-section" id="post-body">Aenean accumsan sollicitudin purus, et interdum mauris lacinia pulvinar. Vestibulum id fermentum urna, vel luctus lorem. Vestibulum at tincidunt massa, a dignissim risus. Pellentesque pulvinar velit ut dignissim maximus. Nunc mollis, nunc a cursus pulvinar, libero felis volutpat est, sed varius lectus ligula eget libero. Vivamus id nibh faucibus, bibendum mi sed, lobortis velit. In eu libero turpis. Nunc laoreet diam eu purus dignissim, at tincidunt felis faucibus. Morbi facilisis id mauris et mollis. Suspendisse potenti. Pellentesque in pulvinar libero. Suspendisse id ornare quam, id euismod sem. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vivamus a nulla dolor.</div>
 	</div>
 {% endblock %}
