--- a/website/application/templates/post.html
+++ b/website/application/templates/post.html
@@ -8,8 +8,10 @@
 
 {% block content %}
 	<div class="post-container">
-		<div class="post-section" id="post-title">Lorem ipsum dolor sit amet</div>
-		<div class="post-section" id="post-author">Written by: Caesar-7 &bull; Approved by: Gianluparri03</div>
-		<div class="post-section" id="post-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In convallis dui purus, sed venenatis nulla iaculis quis. In hac habitasse platea dictumst. Cras aliquam nisl lectus, auctor malesuada libero sollicitudin eu. Duis ultricies erat ac velit semper dapibus. Etiam egestas leo quis odio gravida, ut tincidunt sem iaculis. Duis vestibulum blandit orci, id viverra nunc ornare vel. Quisque pretium ligula quis leo pharetra, id elementum diam porttitor.</div>
+		<div class="post-section" id="post-title">Lorem ipsum dolor	</div>
+		<div class="post-section" id="post-author">
+			Written by: @<a href="#" class="link">Caesar-7</a> &bull; Approved by: @<a href="#" class="link">Gianluparri03</a>
+		</div>
+		<div class="post-section" id="post-body">Lorem ipsum dolor</div>
 	</div>
 {% endblock %}
