--- a/website/application/static/style/create_post.css
+++ b/website/application/static/style/create_post.css
@@ -6,18 +6,20 @@ form {
 }
 
 #post-title {
+	resize: none;
 	font-size: 1.5em;
-	width: 60vw;
-	height: 5vh;
-	padding-right: 0.5vh;
+	width: 70.5vw;
+	min-height: 5vh;
+	padding: 1vh 1vh 0 1vh;
 	margin: 1vh 0 1vh 0;
+	line-height: 1.4;
 	font-family: 'Roboto', sans-serif;
 }
 
-textarea {
+#post-body {
 	resize: none;
 	min-height: 50vh;
-	width: 60vw;
+	width: 70.5vw;
 	margin-bottom: 1vh;
 	padding: 1vh;
 	font-size: 1.25em;
@@ -26,7 +28,7 @@ textarea {
 }
 
 button {
-	width: 61vw;
+	width: 71.5vw;
 	height: 5vh;
 	margin: 1vh 0 1vh 0;
 	background-color: dodgerblue;
