--- a/website/application/templates/layout.html
+++ b/website/application/templates/layout.html
@@ -30,6 +30,7 @@
 				<ul class="navbar">
 					<li class="button"><a href="..">Home</a></li>
 					<li class="button"><a href="../post">Post</a></li>
+					<li class="button"><a href="../create_post">New Post</a></li>
 					{% if not logged_in %}
 						<li class="button rbutton"><a href="login" style="margin-right: 2vh">Login</a></li>
 						<li class="button rbutton"><a href="register">Register</a></li>
