Minor changes (dite la verità, vi ero mancato 😂)

--- a/website/application/templates/layout.html
+++ b/website/application/templates/layout.html
@@ -31,6 +31,7 @@
 					<li class="button"><a href="..">Home</a></li>
 					<li class="button"><a href="../post">Post</a></li>
 					<li class="button"><a href="../create_post">New Post</a></li>
+					<li class="button"><a href="../404">404</a></li>
 					{% if not logged_in %}
 						<li class="button rbutton"><a href="login" style="margin-right: 2vh">Login</a></li>
 						<li class="button rbutton"><a href="register">Register</a></li>
@@ -61,6 +62,10 @@
 			<nav class="footer">
 				<span class="fbutton"><a href="..">Home</span></a>
 				<span class="fbutton"><a href="#">Lorem</span></a>
+				<span class="fbutton"><a href="#">ipsum</span></a>
+				<span class="fbutton"><a href="#">dolor</span></a>
+				<span class="fbutton"><a href="#">sit</span></a>
+				<span class="fbutton"><a href="#">amet</span></a>
 				<span><a href='#' title='Torna su'><i class="far fa-arrow-alt-circle-up"></i></a></span>
 			</nav>
 		{% endif %}
