--- a/website/application/templates/post.html
+++ b/website/application/templates/post.html
@@ -8,10 +8,10 @@
 
 {% block content %}
 	<div class="post-container">
-		<div class="post-section" id="post-title">Lorem ipsum dolor	</div>
+		<div class="post-section" id="post-title">Lorem ipsum dolor	sit amet</div>
 		<div class="post-section" id="post-author">
 			Written by: @<a href="#" class="link">Caesar-7</a> &bull; Approved by: @<a href="#" class="link">Gianluparri03</a>
 		</div>
-		<div class="post-section" id="post-body">Lorem ipsum dolor</div>
+		<div class="post-section" id="post-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
 	</div>
 {% endblock %}
