--- a/website/application/templates/create_post.html
+++ b/website/application/templates/create_post.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block content %}
-	<form method="GET" action="/http://0.0.0.0:8000/create_post">
+	<form method="GET" action="/create_post">
 		<textarea name="post_title" placeholder="Post Title (optional)" maxlength="100" col="127" id="post-title"></textarea>
 		<textarea name="post_body" placeholder="Post text" required maxlength="3000" id="post-body"></textarea>
 		<button>Post <i class="fas fa-arrow-up"></i></button>
