--- a/website/application/templates/layout.html
+++ b/website/application/templates/layout.html
@@ -31,7 +31,7 @@
 					<li class="button"><a href="..">Home</a></li>
 					<li class="button"><a href="../post">Post</a></li>
 					<li class="button"><a href="../create_post">New Post</a></li>
-					<li class="button"><a href="../404">404</a></li>
+					<li class="button"><a href="../f">404</a></li>
 					{% if not logged_in %}
 						<li class="button rbutton"><a href="login" style="margin-right: 2vh">Login</a></li>
 						<li class="button rbutton"><a href="register">Register</a></li>
